engine/tests/fixtures/invalid/http-responses/entity-task.tg
entity entity_task {
  name "Task"
  description "Task entity"

  fields {
    id uuid required
    created_at datetime required
  }

  status active
}
